@@ -28,11 +28,11 @@
 #include "seahorse-widget.h"
 
 #define SEAHORSE_TYPE_OBJECT_WIDGET		(seahorse_object_widget_get_type ())
-#define SEAHORSE_OBJECT_WIDGET(obj)		(GTK_CHECK_CAST ((obj), SEAHORSE_TYPE_OBJECT_WIDGET, SeahorseObjectWidget))
-#define SEAHORSE_OBJECT_WIDGET_CLASS(klass)	(GTK_CHECK_CLASS_CAST ((klass), SEAHORSE_TYPE_OBJECT_WIDGET, SeahorseObjectWidgetClass))
-#define SEAHORSE_IS_OBJECT_WIDGET(obj)		(GTK_CHECK_TYPE ((obj), SEAHORSE_TYPE_OBJECT_WIDGET))
-#define SEAHORSE_IS_OBJECT_WIDGET_CLASS(klass)	(GTK_CHECK_CLASS_TYPE ((klass), SEAHORSE_TYPE_OBJECT_WIDGET))
-#define SEAHORSE_OBJECT_WIDGET_GET_CLASS(obj)	(GTK_CHECK_GET_CLASS ((obj), SEAHORSE_TYPE_OBJECT_WIDGET, SeahorseObjectWidgetClass))
+#define SEAHORSE_OBJECT_WIDGET(obj)		(G_TYPE_CHECK_INSTANCE_CAST ((obj), SEAHORSE_TYPE_OBJECT_WIDGET, SeahorseObjectWidget))
+#define SEAHORSE_OBJECT_WIDGET_CLASS(klass)	(G_TYPE_CHECK_CLASS_CAST ((klass), SEAHORSE_TYPE_OBJECT_WIDGET, SeahorseObjectWidgetClass))
+#define SEAHORSE_IS_OBJECT_WIDGET(obj)		(G_TYPE_CHECK_INSTANCE_TYPE ((obj), SEAHORSE_TYPE_OBJECT_WIDGET))
+#define SEAHORSE_IS_OBJECT_WIDGET_CLASS(klass)	(G_TYPE_CHECK_CLASS_TYPE ((klass), SEAHORSE_TYPE_OBJECT_WIDGET))
+#define SEAHORSE_OBJECT_WIDGET_GET_CLASS(obj)	(G_TYPE_INSTANCE_GET_CLASS ((obj), SEAHORSE_TYPE_OBJECT_WIDGET, SeahorseObjectWidgetClass))
 
 typedef struct _SeahorseObjectWidget SeahorseObjectWidget;
 typedef struct _SeahorseObjectWidgetClass SeahorseObjectWidgetClass;
