@@ -1,3 +1,10 @@
+2009-02-17  Adam Schreiber  <sadam@clemson.edu>
+
+    * src/seahorse-keyserver-search.c:
+    * gkr/seahorse-gkr-item-properties.c:
+    * libseahorse/seahorse-object-widget.h: Remove deprecated GTK+ symbols
+    Fixes bug #572181
+
 2009-02-17  Gabor Kelemen  <kelemeng@gnome.hu>
 
 	* src/seahorse-keyserver-results.c:
